# MethodOfLines

./: README.md
CSV-ODT/: 3Dimensional_PDE_2.ods  3Dimensional_PDE_4.ods  3Dimensional_PDE_44.ods  3Dimensional_PDE_4_11.csv  3Dimensional_PDE_4_2.csv  3Dimensional_PDE_4_4.csv  3Dimensional_PDE_FDifference.ods  Burgers.ods  Difussion_PDE4_4.ods  Difussion_PDE4_44.csv  Difussion_PDE_42_02.ods  Difussion_PDE_44.csv  Difussion_PDE_46_06.ods  Laplace-DSS44.ods  LinearEquation_stiff4_48.csv  MaxwellEquation4_10.csv  MaxwellEquation4_2.csv  MaxwellEquation4_42.csv  MaxwellEquation4_42.ods  MaxwellEquation4_44.csv  MaxwellEquation4_46.csv  MaxwellEquation4_48.csv  MaxwellEquation4_50.csv  MaxwellEquation4_6.csv  MaxwellEquation4_STAGEWISE.ods  Mixed_PDE_4_44.csv  Mixed_PDE_4_44_error.csv  green.ods  korteweg1.ods  korteweg2-2Solitions.ods  korteweg2.ods  laplaceEquation4_2.csv  laplaceEquation4_30.csv  laplaceEquation4_4.csv  laplaceEquation4_44.csv  linearEquation4.csv  linearEquation4_-1.csv  linearEquation4_42.csv  linearEquation_GAUSS_4.ods  linearEquation_GAUSS_8.ods  (+19 more)
Chapter10/: LAPLACE.cpp
Chapter11/: 3D_PDE.cpp
Chapter12/: MIXED_PDE.cpp
Chapter13/: CMakeLists.txt  CONSTANTS.hpp  DIFUSSION.cpp
Chapter14/: Difussion_PDE_44_04.ods  Difussion_PDE_6.csv  SIMPLE_DIFFUSION_SPHE0.ods  SIMPLE_DIFFUSION_SPHE0_trial1.ods  SIMPLE_DIFFUSION_SPHE1.csv  SIMPLE_DIFFUSION_SPHE2.csv  SIMPLE_DIFFUSION_SPHE2_integrator_6.csv  SIMPLE_DIFFUSION_SPHE6.csv  (+6 more)
Chapter14/TWO_DIMENSION/: .cproject  .project  CMakeLists.txt  CONSTANTS.hpp  DIFUSSION_3D.cpp
Chapter2/: MOL.cpp
(+23 files in other folders)
